# langchian_course_ammar

./: 1agent_langchain_toolcall.py  2agent_loop_raw_function_calling.py  3row_react_prompt.py  README.md  ingestion.py  main.py  pyproject.toml
