[project]
name = "ammar-langchain-corse-serch-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-core>=1.3.2",
    "langchain-openai",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "tavily",
    "tavily-python>=0.7.23",
]
